--- a/style.css
+++ b/style.css
@@ -229,9 +229,17 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/hero-bg.jpg") top center;
+  position: top center;
   background-size: cover;
-}
+}#heroimg {
+  width: 100%;
+
+  height: 100vh;
+
+  position: top center;
+
+  background-size: cover;
+  }
 
 #hero:before {
   content: "";
