--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,15 @@ div{
         color: rgba(255, 0, 13, 0.797);
         margin-top: 5px;
         margin-left: 27px;
-    }
+    }#heroimg {
+        width: 100%;
+
+  height: 100vh;
+
+  position: top center;
+
+  background-size: cover;
+        }
     .s{
 color: brown;
 margin-top: 0px;
