--- a/Style.css
+++ b/Style.css
@@ -4,11 +4,11 @@ div{
         color: rgba(255, 0, 13, 0.797);
         margin-top: 5px;
         margin-left: 27px;
-    }#heroimg {
+    }#hero{
         width: 100%;
 
   height: 100vh;
-
+background: url("../img/hero-bg.jpg") top center;
   position: top center;
 
   background-size: cover;
