--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h6 {
   border: 0;
   font-size: 24px;
   transition: all 0.4s;
-  outline: none !important;
+  outline: none important!;
   background-color: #149ddd;
   color: #fff;
   width: 40px;
