--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ h6 {
   border: 0;
   font-size: 24px;
   transition: all 0.4s;
-  outline: none important!;
+  outline: none !important;
   background-color: #149ddd;
   color: #fff;
   width: 40px;
@@ -229,17 +229,9 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
- background: url("\hero-bg.jpg") top center;background: url("hero-bg.jpg") top center;
+  background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
-}#heroimg {
-  width: 100%;
-
-  height: 100vh;
-
-  position: top center;
-
-  background-size: cover;
-  }
+}
 
 #hero:before {
   content: "";
