--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@ div{
         width: 100%;
 
   height: 100vh;
-background: url("../img/hero-bg.jpg") top center;
+background: url("hero-bg.jpg") top center;
   position: top center;
 
   background-size: cover;
